--- a/pages/components/promotion.pug
+++ b/pages/components/promotion.pug
@@ -1,12 +1,17 @@
-.promotion 
-  h1.promotion__title Lightning fast
-    br
-    | prototyping
-  .promotion__text Most calendars are designed for teams. Slate is
-    br 
-    | designed for freelancers.
-  .promotion__buttons 
-    button.button.button__contain Get Started
-    button.button.button__text Try For Free
-  .promotion__board 
-    img(src="../img/screen.png", alt="sceen")
+.container
+    .row
+        .col-1
+        .col-10
+            .promotion 
+                h1.promotion__title Lightning fast
+                    br
+                    | prototyping
+                .promotion__text Most calendars are designed for teams. Slate is
+                    br 
+                    | designed for freelancers.
+                .promotion__buttons 
+                    button.button.button__contain Get Started
+                    button.button.button__text Try For Free
+                .promotion__board 
+                    img(src="../img/screen.png", alt="sceen")
+        .col-1 
