--- a/pages/components/header.pug
+++ b/pages/components/header.pug
@@ -1,11 +1,15 @@
-
-.navbar
-  .logo
-    img(src='img/logotype.svg' alt='logotype')
-  .menu
-    ul.main-menu
-      li.main-menu_item Home
-      li.main-menu_item Product
-      li.main-menu_item About
-      li.main-menu_item Contact
-  button(onclick='alert()' class='button__outlined') Login
+.container
+    .row
+        .col-1
+        .col-10
+            .navbar
+                .logo
+                    img(src="img/logotype.svg", alt="logotype")
+                .menu
+                    ul.main-menu
+                        li.main-menu_item Home
+                        li.main-menu_item Product
+                        li.main-menu_item About
+                        li.main-menu_item Contact
+                button.button__outlined(onclick="alert()") Login
+        .col-1
