--- a/pages/index.pug
+++ b/pages/index.pug
@@ -12,3 +12,4 @@ body
     include ./components/opentype.pug
     include ./components/variablefonts.pug
     include ./components/processbar.pug
+    include ./components/testimonials.pug
