--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
 @import "./opentype.scss";
 @import "./variablefonts.scss";
 @import "./processbar.scss";
+@import "./testimonials.scss";
 
 body {
     font-size: 14px;
