--- a/pages/index.pug
+++ b/pages/index.pug
@@ -13,3 +13,6 @@ body
     include ./components/variablefonts.pug
     include ./components/processbar.pug
     include ./components/testimonials.pug
+    include ./components/priceing.pug
+    include ./components/customerfocus.pug
+    include ./components/footer.pug
