--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,9 @@
 @import "./variablefonts.scss";
 @import "./processbar.scss";
 @import "./testimonials.scss";
+@import "./priceing.scss";
+@import "./customerfocus.scss";
+@import "./footer.scss";
 
 body {
     font-size: 14px;
