--- a/pages/components/customerfocus.pug
+++ b/pages/components/customerfocus.pug
@@ -1,26 +1,27 @@
-.row
-    .col-1
-    .col-10
-        .customerfocus 
-            .customerfocus__title We focus on ergonomic
-                br
-                | meeting
-            .customerfocus__discript 
-                .customerfocus__discript-text Being a freelancer is a rollercoaster of emotions.
+.container.customfocus__container
+    .row
+        .col-1
+        .col-10
+            .customerfocus 
+                .customerfocus__title We focus on ergonomic
                     br
-                    | We built Slate to keep your freelance business
-                    br
-                    | building...
-                    br
-                    |
-                    br
-                    |
-                    br
-                    | Being a freelancer is a rollercoaster of emotions.
-                    br
-                    | We built Slate to keep your freelance business
-                    br
-                    | building...
-                .customerfocus__discript-button
-                    button.button.button__contain Get Started
-    .col-1 
+                    | meeting
+                .customerfocus__discript 
+                    .customerfocus__discript-text Being a freelancer is a rollercoaster of emotions.
+                        br
+                        | We built Slate to keep your freelance business
+                        br
+                        | building...
+                        br
+                        |
+                        br
+                        |
+                        br
+                        | Being a freelancer is a rollercoaster of emotions.
+                        br
+                        | We built Slate to keep your freelance business
+                        br
+                        | building...
+                    .customerfocus__discript-button
+                        button.button.button__contain Get Started
+        .col-1 
