--- a/pages/components/justtype.pug
+++ b/pages/components/justtype.pug
@@ -1,13 +1,14 @@
-.row
-    .col-1
-    .col-10
-        .justtype 
-            .justtype__first_title Just type
-            .justtype__secont_title Fastest way to navigate
-            .justtype__text Most calendars are designed for teams.
-                br 
-                | Slate is designed for freelancers.
-            .justtype__buttons 
-                button.button.button__contain Download
-                button.button.button__outlined See Walkthrough
-    .col-1
+.container 
+    .row
+        .col-1
+        .col-10
+            .justtype 
+                .justtype__first_title Just type
+                .justtype__secont_title Fastest way to navigate
+                .justtype__text Most calendars are designed for teams.
+                    br 
+                    | Slate is designed for freelancers.
+                .justtype__buttons 
+                    button.button.button__contain Download
+                    button.button.button__outlined See Walkthrough
+        .col-1
