--- a/styles/priceing.scss
+++ b/styles/priceing.scss
@@ -1,5 +1,7 @@
-.priceing {
+.pricing__container {
     background: #182333;
+}
+.priceing {
     display: flex;
     flex-direction: row;
     justify-content: center;
