--- a/styles/variablefonts.scss
+++ b/styles/variablefonts.scss
@@ -1,5 +1,8 @@
+.variablefont__container {
+    background: url(../img/yellowround2.svg) 0% / contain;
+    background-repeat: no-repeat;
+}
 .variablefonts {
-    background-color: $colorWhite;
     // background-image: url(../img/yellowround2.svg) right;
     background-repeat: no-repeat;
     display: flex;
