--- a/styles/promotion.scss
+++ b/styles/promotion.scss
@@ -1,43 +1,55 @@
-.promotion {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 189.5px;
+.promotion__container {
+    background: url(../img/blueround.png) 0% 28%,
+        url(../img/yellowround.png) 100% 38%,
+        linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0.22) 7.62%,
+            rgba(0, 225, 198, 0.3) 20%,
+            #ffffff 70%
+        );
 
-  .promotion__title {
-    text-align: center;
-    font-family: Circular Std;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 78px;
-    letter-spacing: 0.2px;
-    color: #112d57;
-    margin-bottom: 37px;
-  }
-  &__text {
-    font-family: Circular Std;
-    font-style: normal;
-    font-weight: 450;
-    font-size: 24px;
-    line-height: 38px;
-    text-align: center;
-    letter-spacing: 0.2px;
-    color: #5c5c5c;
-    margin-bottom: 94px;
-  }
-  &__buttons {
-    .button {
-      margin-left: 12.5px;
-      margin-right: 12.5px;
+    background-repeat: no-repeat;
+}
+.promotion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 189.5px;
+
+    .promotion__title {
+        text-align: center;
+        font-family: Circular Std;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 72px;
+        line-height: 78px;
+        letter-spacing: 0.2px;
+        color: #112d57;
+        margin-bottom: 37px;
     }
-  }
-  &__board {
-    width: 100%;
-  }
-  img {
-    width: 116%;
-    margin-left: -8%;
-  }
+    &__text {
+        font-family: Circular Std;
+        font-style: normal;
+        font-weight: 450;
+        font-size: 24px;
+        line-height: 38px;
+        text-align: center;
+        letter-spacing: 0.2px;
+        color: #5c5c5c;
+        margin-bottom: 94px;
+    }
+    &__buttons {
+        .button {
+            margin-left: 12.5px;
+            margin-right: 12.5px;
+        }
+    }
+    &__board {
+        width: 100%;
+    }
+    img {
+        width: 116%;
+        margin-left: -8%;
+    }
 }
