--- a/pages/components/footer.pug
+++ b/pages/components/footer.pug
@@ -13,11 +13,19 @@
                         li.main-menu_item About
                         li.main-menu_item Contact
                 .footerNav__menu-networks
-                    .footerNav__menu-networks-twit 
-                    img(src="img/twitter.svg", alt="twitter")
-                    .footerNav__menu-networks-fb 
-                    img(src="img/facebook.svg", alt="facebook")
-                    .footerNav__menu-networks-insta
-                    img(src="img/insta.svg", alt="insta")
+                    img.footerNav__menu-networks-twit(
+                        src="img/twitter.svg",
+                        alt="twitter"
+                    )
+
+                    img.footerNav__menu-networks-fb(
+                        src="img/facebook.svg",
+                        alt="facebook"
+                    )
+
+                    img.footerNav__menu-networks-insta(
+                        src="img/insta.svg",
+                        alt="insta"
+                    )
 
         .col-1
