--- a/pages/components/header.pug
+++ b/pages/components/header.pug
@@ -3,8 +3,7 @@
         .col-1
         .col-10
             .navbar
-                .logo
-                    img(src="img/logotype.svg", alt="logotype")
+                img.logo(src="img/logotype.svg", alt="logotype")
                 .menu
                     ul.main-menu
                         li.main-menu_item Home
@@ -12,4 +11,5 @@
                         li.main-menu_item About
                         li.main-menu_item Contact
                 button.button__outlined(onclick="alert()") Login
+                img.sidebar(src="../img/sidebar.svg")
         .col-1
