--- a/pages/components/processbar.pug
+++ b/pages/components/processbar.pug
@@ -4,10 +4,12 @@
         .col-10
             .processbar 
                 .processbar__title A rethink of how we work
+                .processbar__title_mobile File tasks
                 .processbar__text Being a freelancer is a rollercoaster of emotions. We built Slate to keep your
-
-                .processbar__line 
-                    img(src="../img/progresssbar.png", alt="processsbar")
+                img.processbar__line(
+                    src="../img/progresssbar.png",
+                    alt="processsbar"
+                )
                 .processbar__button
                     button.button.button__contain Download
         .col-1 
