--- a/pages/components/promotion.pug
+++ b/pages/components/promotion.pug
@@ -12,6 +12,6 @@
                 .promotion__buttons 
                     button.button.button__contain Get Started
                     button.button.button__text Try For Free
-                .promotion__board 
-                    img(src="../img/screen.png", alt="sceen")
+
+                img.promotion__board(src="../img/screen.png", alt="sceen")
         .col-1 
