--- a/pages/components/variablefonts.pug
+++ b/pages/components/variablefonts.pug
@@ -3,9 +3,10 @@
         .col-1
         .col-10
             .variablefonts
-                .variablefonts__foto 
-                    img(src="../img/screenshot.png", alt="screenshot")
-
+                img.variablefonts__foto(
+                    src="../img/screenshot.png",
+                    alt="screenshot"
+                )
                 .variablefonts__discript
                     .variablefonts__discript-title Variable fonts
                     .variablefonts__discript-text Most calendars are designed for
