--- a/pages/index.pug
+++ b/pages/index.pug
@@ -4,7 +4,9 @@ head
     title Lightning fast prototyping
     meta(name="viewport", content="width=device-width,initial-scale=1")
     link(rel="stylesheet", href="styles/main.css")
+    link(rel="stylesheet", href="fonts/stylesheet.css")
     link(rel="stylesheet", href="styles/bootstrap.min.css")
+
 body
     include ./components/header.pug
     include ./components/promotion.pug
