--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -12,6 +12,7 @@ $colorWhite: #fff;
     line-height: 20px;
     letter-spacing: 0.2px;
     border-radius: 85px;
+    font-family: Circular Std;
     //   margin-top: 33px;
     //   margin-right: 90px;
     padding: 0 46px;
@@ -26,6 +27,7 @@ $colorWhite: #fff;
     line-height: 20px;
     letter-spacing: 0.2px;
     border-radius: 85px;
+    font-family: Circular Std;
     //   margin-top: 33px;
     //   margin-right: 90px;
     padding: 0 46px;
@@ -35,13 +37,13 @@ $colorWhite: #fff;
     text-align: center;
     border: 1px solid $colorWhite;
     color: #20262a;
-
     background-color: $colorWhite;
     font-size: 18px;
     line-height: 20px;
     letter-spacing: 0.2px;
     border-radius: 85px;
     //   margin-top: 33px;
+    font-family: Circular Std;
     //   margin-right: 90px;
     padding: 0 46px;
 }
