--- a/pages/components/opentype.pug
+++ b/pages/components/opentype.pug
@@ -14,6 +14,5 @@
                         | schedule.
                     .opentype__discript-link
                         a.opentype__discript-link-main(href="http://") learn more
-                .opentype__foto 
-                    img(src="../img/loptop.png", alt="loptop")
+                img.opentype__foto(src="../img/loptop.png", alt="loptop")
         .col-1
