--- a/styles/opentype.scss
+++ b/styles/opentype.scss
@@ -1,6 +1,9 @@
 .opentype__container {
     background: url(../img/blueround2.svg) 100% / contain;
     background-repeat: no-repeat;
+    @media screen and (max-width: $md) {
+        background: url(../img/blueround.png) -5% 50% / 35%;
+    }
 }
 
 .opentype {
@@ -8,15 +11,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     margin-top: 120px;
     margin-bottom: 120px;
-    padding-left: 225px;
-    padding-right: 225px;
+    @media screen and (max-width: $md) {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
     &__discript {
         display: flex;
         flex-direction: column;
-        // padding-left: 35px;
+        padding-left: 35px;
         &-title {
             font-family: Circular Std;
             font-style: normal;
@@ -51,8 +56,10 @@
         }
     }
     &__foto {
-        // padding-left: 35px;
-        width: 516px;
-        height: 351px;
+        padding-left: 35px;
+        @media screen and (max-width: $md) {
+            padding: 0;
+            width: 90%;
+        }
     }
 }
