--- a/styles/processbar.scss
+++ b/styles/processbar.scss
@@ -13,6 +13,23 @@
         letter-spacing: 0.2px;
         color: #20262a;
         padding-top: 72px;
+        @media screen and (max-width: $md) {
+            display: none;
+        }
+    }
+    &__title_mobile {
+        display: none;
+        @media screen and (max-width: $md) {
+            display: inline-block;
+            font-family: Circular Std;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 56px;
+            line-height: 65px;
+            letter-spacing: 0.2px;
+            color: #20262a;
+            padding-top: 72px;
+        }
     }
     &__text {
         font-family: Circular Std;
@@ -23,10 +40,16 @@
         letter-spacing: 0.2px;
         color: #5c5c5c;
         padding-top: 27px;
+        @media screen and (max-width: $md) {
+            text-align: center;
+        }
     }
     &__line {
         padding-top: 62px;
         padding-bottom: 71px;
+        @media screen and (max-width: $md) {
+            width: 90%;
+        }
     }
     &__button {
         padding-bottom: 62px;
