--- a/styles/promotion.scss
+++ b/styles/promotion.scss
@@ -7,7 +7,16 @@
             rgba(0, 225, 198, 0.3) 20%,
             #ffffff 70%
         );
-
+    @media screen and (max-width: $md) {
+        background: url(../img/blueround.png) -25% 70% / 35%,
+            url(../img/yellowround.png) 130% 95% / 35%,
+            linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0.22) 7.62%,
+                rgba(0, 225, 198, 0.3) 40%,
+                #ffffff 100%
+            );
+    }
     background-repeat: no-repeat;
 }
 .promotion {
@@ -27,6 +36,9 @@
         letter-spacing: 0.2px;
         color: #112d57;
         margin-bottom: 37px;
+        @media screen and (max-width: $md) {
+            font-size: 56px;
+        }
     }
     &__text {
         font-family: Circular Std;
@@ -40,6 +52,14 @@
         margin-bottom: 94px;
     }
     &__buttons {
+        display: flex;
+        @media screen and (max-width: $xs) {
+            flex-direction: column;
+            .button {
+                margin: 5px 0;
+            }
+        }
+        flex-direction: row;
         .button {
             margin-left: 12.5px;
             margin-right: 12.5px;
@@ -47,9 +67,8 @@
     }
     &__board {
         width: 100%;
-    }
-    img {
-        width: 116%;
-        margin-left: -8%;
+        @media screen and (min-width: $xl) {
+            width: 80%;
+        }
     }
 }
