--- a/styles/variablefonts.scss
+++ b/styles/variablefonts.scss
@@ -1,6 +1,11 @@
 .variablefont__container {
     background: url(../img/yellowround2.svg) 0% / contain;
     background-repeat: no-repeat;
+    @media screen and (max-width: $md) {
+        flex-direction: column;
+        text-align: center;
+        background: url(../img/yellowround.png) 130% 14% / 40%;
+    }
 }
 .variablefonts {
     // background-image: url(../img/yellowround2.svg) right;
@@ -8,20 +13,28 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     margin-top: 120px;
     margin-bottom: 120px;
-    padding-left: 225px;
-    padding-right: 225px;
+    @media screen and (max-width: $md) {
+        flex-direction: column;
+        text-align: center;
+    }
+
     &__foto {
-        // padding-right: 35px;
-        width: 516px;
-        height: 351px;
+        padding-right: 35px;
+        @media screen and (max-width: $md) {
+            padding-right: 0px;
+            width: 90%;
+        }
     }
     &__discript {
         display: flex;
         flex-direction: column;
-        // padding-left: 35px;
+        padding-left: 35px;
+        @media screen and (max-width: $md) {
+            padding-left: 0px;
+        }
         &-title {
             font-family: Circular Std;
             font-style: normal;
